@@ -2409,20 +2409,41 @@ void jshFlashWrite(void * buf, uint32_t addr, uint32_t len) {
       uint32_t pageOffset = addr & 255;
       uint32_t bytesLeftInPage = 256-pageOffset;
       if (l>bytesLeftInPage) l=bytesLeftInPage;
-      // WREN
-      b[0] = 0x06;
-      spiFlashWriteCS(b,1);
-      // Write
-      b[0] = 0x02;
-      b[1] = addr>>16;
-      b[2] = addr>>8;
-      b[3] = addr;
-      nrf_gpio_pin_clear((uint32_t)pinInfo[SPIFLASH_PIN_CS].pin);
-      spiFlashWrite(b,4);
-      spiFlashWrite(bufPtr,l);
-      nrf_gpio_pin_set((uint32_t)pinInfo[SPIFLASH_PIN_CS].pin);
-      // Check busy
-      WAIT_UNTIL(!(spiFlashStatus()&1), "jshFlashWrite");
+
+      int retries = 3;
+      while (retries>0) {
+        // WREN
+        b[0] = 0x06;
+        spiFlashWriteCS(b,1);
+        // Write
+        b[0] = 0x02;
+        b[1] = addr>>16;
+        b[2] = addr>>8;
+        b[3] = addr;
+        nrf_gpio_pin_clear((uint32_t)pinInfo[SPIFLASH_PIN_CS].pin);
+        spiFlashWrite(b,4);
+        spiFlashWrite(bufPtr,l);
+        nrf_gpio_pin_set((uint32_t)pinInfo[SPIFLASH_PIN_CS].pin);
+        // Check busy
+        WAIT_UNTIL(!(spiFlashStatus()&1), "jshFlashWrite");
+        // Now read first 4 bytes to ensure write completed ok
+        // https://github.com/espruino/Espruino/issues/2109
+        b[0] = 0x03;
+        b[1] = addr>>16;
+        b[2] = addr>>8;
+        b[3] = addr;
+        nrf_gpio_pin_clear((uint32_t)pinInfo[SPIFLASH_PIN_CS].pin);
+        spiFlashWrite(b,4);
+        spiFlashRead(b,4);
+        nrf_gpio_pin_set((uint32_t)pinInfo[SPIFLASH_PIN_CS].pin);
+        //
+        if (b[0]!=bufPtr[0] || b[1]!=bufPtr[1] || b[2]!=bufPtr[2] || b[3]!=bufPtr[3]) retries--; // byte is still erased - try again
+        else retries=-1; // all ok, exit now
+      };
+      if (!retries) {
+        jsiConsolePrintf("jshFlashWrite SPI addr 0x%08x failed", addr);
+      }
+
       // go to next chunk
       len -= l;
       addr += l;
